load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "bench_test",
    srcs = [
        "bench_test.go",
        "differential_atomic_test.go",
        "differential_conflict_range_test.go",
        "differential_fuzz_test.go",
        "differential_getkey_boundary_test.go",
        "differential_getkey_conflict_test.go",
        "differential_getkey_ryw_test.go",
        "differential_getrange_selector_test.go",
        "differential_read_test.go",
        "differential_ryw_test.go",
        "differential_rywdisable_test.go",
        "differential_snapshot_ryw_test.go",
        "differential_test.go",
        "differential_tuple_test.go",
        "differential_versionstamp_test.go",
        "interop_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        "//pkg/fdbgo/client",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/directory",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/directory",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_docker_docker//api/types/container",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//exec",
    ],
)
