load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "commitpath.go",
        "coordinator.go",
        "database.go",
        "endpoint.go",
        "failure_monitor.go",
        "grv.go",
        "loadbalance.go",
        "locality.go",
        "metrics.go",
        "readpath.go",
        "rpc.go",
        "ryw.go",
        "topology.go",
        "transaction.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/fdbgo/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fdbgo/transport",
        "//pkg/fdbgo/wire",
        "//pkg/fdbgo/wire/types",
    ],
)

go_test(
    name = "client_test",
    timeout = "eternal",
    srcs = [
        "bench_test.go",
        "c_binding_port_test.go",
        "client_test.go",
        "coordinator_test.go",
        "correctness_test.go",
        "failure_monitor_test.go",
        "fault_test.go",
        "lint_test.go",
        "loadbalance_test.go",
        "locality_test.go",
        "nil_shard_end_test.go",
        "setget_test.go",
    ],
    args = [
        "-test.parallel=4",
        "-test.timeout=3600s",
    ],
    embed = [":client"],
    deps = [
        "//pkg/fdbgo/transport",
        "//pkg/fdbgo/wire",
        "//pkg/fdbgo/wire/types",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_zeebo_xxh3//:xxh3",
    ],
)
