load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "clientmetrics.go",
        "commitpath.go",
        "coordinator.go",
        "database.go",
        "endpoint.go",
        "failure_monitor.go",
        "grv.go",
        "hedge.go",
        "loadbalance.go",
        "locality.go",
        "metrics.go",
        "options.go",
        "readpath.go",
        "rpc.go",
        "ryw.go",
        "ryw_getkey.go",
        "ryw_snapshot_cache.go",
        "sizelimits.go",
        "tag_throttle.go",
        "tls.go",
        "topology.go",
        "transaction.go",
    ],
    importpath = "github.com/birdayz/fdb-record-layer-go/pkg/fdbgo/client",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fdbgo/transport",
        "//pkg/fdbgo/wire",
        "//pkg/fdbgo/wire/types",
    ],
)

go_test(
    name = "client_test",
    timeout = "eternal",
    srcs = [
        "atomic_conflictrange_test.go",
        "atomic_roundtrip_test.go",
        "atomic_test.go",
        "bench_test.go",
        "boundary_test.go",
        "c_binding_port_test.go",
        "client_test.go",
        "clientmetrics_test.go",
        "commit_dummy_regression_test.go",
        "commit_path_grv_ctx_test.go",
        "commitpath_test.go",
        "commitpath_unit_test.go",
        "concurrent_stress_test.go",
        "connmon_ping_test.go",
        "connmon_test.go",
        "coordinator_test.go",
        "correctness_test.go",
        "database_test.go",
        "endpoint_test.go",
        "failure_monitor_test.go",
        "fault_test.go",
        "getkey_conflict_unit_test.go",
        "grv_cache_optin_test.go",
        "grv_test.go",
        "grv_unit_test.go",
        "hedge_test.go",
        "isolation_test.go",
        "limits_test.go",
        "lint_test.go",
        "loadbalance_test.go",
        "locality_test.go",
        "locality_unit2_test.go",
        "locked_database_test.go",
        "multishard_test.go",
        "nil_shard_end_test.go",
        "parse_fuzz_test.go",
        "readpath_test.go",
        "readpath_timeout_test.go",
        "readpath_unit_test.go",
        "reply_ground_truth_test.go",
        "retry_adversarial_test.go",
        "retry_predicate_pin_test.go",
        "retry_test.go",
        "rpc_test.go",
        "ryw_adversarial_test.go",
        "ryw_fuzz_test.go",
        "ryw_getkey_test.go",
        "ryw_integration_test.go",
        "ryw_snapshot_cache_test.go",
        "ryw_test.go",
        "setget_test.go",
        "sizelimits_test.go",
        "snapshot_test.go",
        "tag_throttle_test.go",
        "tenant_commit_test.go",
        "testmain_test.go",
        "tls_test.go",
        "topology_unit2_test.go",
        "topology_unit_test.go",
        "transaction_concurrent_unit_test.go",
        "transaction_options_test.go",
        "transaction_unit_test.go",
        "unreadable_test.go",
    ],
    args = [
        "-test.parallel=4",
        "-test.timeout=3600s",
    ],
    data = ["//pkg/fdbgo/wire/types:testdata.json"],
    embed = [":client"],
    deps = [
        "//pkg/fdbgo/transport",
        "//pkg/fdbgo/wire",
        "//pkg/fdbgo/wire/types",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_zeebo_xxh3//:xxh3",
    ],
)
